--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>Formulário</h2>
-    <form action="login.html" method="post">
+    <form action="index1.html" method="post">
         <label for="email">Email:</label>
         <input type="email" name="email" required>
 
